--- a/login.html
+++ b/login.html
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My app</title>
+    <title>Login html</title>
   </head>
   <body>
-    This is my app!
-    Added login form
+    Hello World!
 
   </body>
 </html>
